2017-03-03  Edward Jones  <ed.jones@embecosm.com>

	* include/mageec/Framwork.h (Framework::Framework): Add
	with_sql_trace argument.
	(Framework::setSQLTrace): Added method.
	* include/mageec/SQLQuery.h (SQLQuery::m_sql_query): Added
	member.
	* include/mageec/Util.h (withSQLTrace setSQLTrace): Added
	functions.
	* lib/Driver.cpp (main): Parse --sql-trace argument, pass
	value to Framework constructor.
	* lib/Framework.cpp (Framework::Framework): Add with_sql_trace
	argument.
	(Framework::setSQLTrace): Add implementation of function.
	* lib/SQLQuery.cpp (SQLQuery::m_sql_trace): Add member.
	(SQLQuery::exec): Print sql query on query execution.
	* lib/Util.cpp (withSQLTrace setSQLTrace): Added functions.

2017-03-02  Edward Jones  <ed.jones@embecosm.com>

	* lib/Database.cpp (Database::appendDatabase): Add all compilation
	ids in one large transaction.

2017-03-02  Edward Jones  <ed.jones@embecosm.com>

	* include/mageec/Database.h (Database::appendDatabase): Add
	function to merge databases.
	* lib/Database.cpp (Database::appendDatabase): Likewise.
	* lib/Driver.cpp (DriverMode): Add kAppend mode enumeration value.
	(appendDatabase): Add driver function to merge databases.
	(main): Parse and handle --append argument.

2017-02-20  Edward Jones  <ed.jones@embecosm.com>

	* script/combined-elimination.py: Treat result values as floating
	point values instead of integers.

2017-02-20  Edward Jones  <ed.jones@embecosm.com>

	* script/combined-elimination.py: Add executable flags to be used
	when measuring executables.
	* script/measure-code-size.py: Likewise.

2017-02-10  Edward Jones  <ed.jones@embecosm.com>

	* script/combined-elimination.py: Also do a run at -Os for
	comparison purposes.

2017-02-10  Edward Jones  <ed.jones@embecosm.com>

	* lib/Driver.cpp (parseResults): Read in the newly formatted
	results csv file.

2017-02-10  Edward Jones  <ed.jones@embecosm.com>

	* script/measure-code-size.py: Update result file csv output to